{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 26,
  "lineage": "96c5e0ad-4858-b2d1-51f0-8f8ca8710bc3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pb_EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a929b66ed6e0de6",
            "arn": "arn:aws:ec2:us-east-1:866934333672:instance/i-01846db3865cd2b35",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01846db3865cd2b35",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07261f4b1c87b3099",
            "private_dns": "ip-172-31-42-80.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.42.80",
            "public_dns": "ec2-3-92-43-237.compute-1.amazonaws.com",
            "public_ip": "3.92.43.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a4e18f0bb5aaa8b7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "pb_test_securitygrp"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce1215d1dc5f1bd0",
            "tags": {
              "Name": "pbec2"
            },
            "tags_all": {
              "Name": "pbec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-070b1a80596ebc794"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.pb_test_securitygrp",
            "data.aws_ami.ec2-latest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pb_test_securitygrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:security-group/sg-070b1a80596ebc794",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-070b1a80596ebc794",
            "ingress": [],
            "name": "pb_test_securitygrp",
            "name_prefix": "",
            "owner_id": "866934333672",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pb_test_securitygrp_tags"
            },
            "tags_all": {
              "Name": "pb_test_securitygrp_tags"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e13ae6de03f62cd5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "pb_allow_all_traffic_ipv4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:security-group-rule/sgr-0cca2451586dc4f9c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cca2451586dc4f9c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-070b1a80596ebc794",
            "security_group_rule_id": "sgr-0cca2451586dc4f9c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.pb_test_securitygrp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "pb_allow_all_traffic_ipv4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:security-group-rule/sgr-07f44a0abe0863349",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07f44a0abe0863349",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-070b1a80596ebc794",
            "security_group_rule_id": "sgr-07f44a0abe0863349",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.pb_test_securitygrp"
          ]
        }
      ]
    }
  ]
}